2007-04-30  Thomas Wood  <thos@gnome.org>

	* appearance-main.c:
	* appearance-themes.c:
	* appearance-themes.h:
	* appearance.h:

	Add license headers
