@@ -1,3 +1,11 @@
+2007-04-30  Jens Granseuer  <jensgr@gmx.net>
+
+	* Makefile.am: use GNOMECC_GLADE_DIR like the other capplets
+	do
+	* appearance-main.c: (init), (main): move initialization to
+	a separate function, fix glade file location, leak less
+	memory, and init g_threads
+
 2007-04-30  Thomas Wood  <thos@gnome.org>
 
 	* appearance-main.c:
